fixed songlist not showing correctly on small or single screens

--- a/src/components/styles/dualscreen.css
+++ b/src/components/styles/dualscreen.css
@@ -60,9 +60,6 @@
     padding: 5vh;
   }
 
-  .fade {
-    height: 10vh;
-  }
   .message-box {
     display: none;
   }
