--- a/src/components/styles/song-list.css
+++ b/src/components/styles/song-list.css
@@ -1,6 +1,7 @@
 .song-wrapper {
   display: flex;
   justify-content: center;
+  height:100vh;
 }
 
 .song-card {
